plugins {
	id 'fabric-loom' version '0.10.+'
}

sourceCompatibility = JavaVersion.VERSION_17
targetCompatibility = JavaVersion.VERSION_17

archivesBaseName = project.archives_base_name
version = project.mod_version
group = project.maven_group

minecraft {}

repositories {
	maven { url = "https://maven.fabricmc.net/" }
	maven { url 'https://jitpack.io' }
	maven {
		name = "Shedaniel's Maven"
		url = "https://maven.shedaniel.me/"
	}

	maven {
		name = "TerraformersMC"
		url = "https://maven.terraformersmc.com/releases/"
	}
}

dependencies {
	//to change the versions see the gradle.properties file
	minecraft "com.mojang:minecraft:${project.minecraft_version}"
	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"

	include("com.github.Draylar.omega-config:omega-config-gui:${project.omega_config_version}")
	include("com.github.Draylar.omega-config:omega-config-base:${project.omega_config_version}")
	modImplementation("com.github.Draylar.omega-config:omega-config-base:${project.omega_config_version}")
	modImplementation("com.github.Draylar.omega-config:omega-config-gui:${project.omega_config_version}")
	modRuntimeOnly ("com.terraformersmc:modmenu:${project.modmenu_version}")


	// PSA: Some older mods, compiled on Loom 0.2.1, might have outdated Maven POMs.
	// You may need to force-disable transitiveness on them.
}

processResources {
	inputs.property "version", project.version

	filesMatching("fabric.mod.json") {
		expand "version": project.version
	}
}

// ensure that the encoding is set to UTF-8, no matter what the system default is
// this fixes some edge cases with special characters not displaying correctly
// see http://yodaconditions.net/blog/fix-for-java-file-encoding-problems-with-gradle.html
tasks.withType(JavaCompile) {
	options.encoding = "UTF-8"
}

// Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
// if it is present.
// If you remove this task, sources will not be generated.
task sourcesJar(type: Jar, dependsOn: classes) {
	archiveClassifier.set("sources")
	from sourceSets.main.allSource
}

jar {
	from "LICENSE"
}

